--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./src/server.js",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "migrate": "node-pg-migrate"
   },
   "author": "Rizky Ardiansyah",
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
+    "dotenv": "^16.0.0",
     "joi": "^17.6.0",
-    "nanoid": "^3.3.3"
+    "nanoid": "^3.3.3",
+    "node-pg-migrate": "^6.2.1",
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "eslint": "^8.14.0",
