pass the test "Get Detail Album which Contains Songs".

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,8 +12,6 @@
         "ecmaVersion": "latest"
     },
     "rules": {
-        "no-console": "off",
-        "no-underscore-dangle": "off",
-        "camelcase": "off"
+        "no-underscore-dangle": "off"
     }
 }
