--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
+    "@hapi/jwt": "^3.0.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.0",
     "joi": "^17.6.0",
